[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/entities/player_local/player_local.gd" type="Script" id=1]
[ext_resource path="res://rifle.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=6]

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hitmarker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hitmarker"
tracks/0/type = "value"
tracks/0/path = NodePath("Hitmarker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 0.75, 0, 0, 0, -3.27835e-08, -1, 0, 0.75, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 6 )

[node name="Skin" type="MeshInstance" parent="Hitbox"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 1.06581e-14, 1, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="Rifle" parent="Camera" instance=ExtResource( 2 )]
unique_name_in_owner = true
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.370093, -1.19738 )

[node name="RayCast" type="RayCast" parent="Camera"]
unique_name_in_owner = true
enabled = true
cast_to = Vector3( 0, 0, -500 )
collision_mask = 5
collide_with_areas = true

[node name="DebugHUD" type="Panel" parent="."]
anchor_right = 0.255
anchor_bottom = 0.115
margin_right = -0.600037
margin_bottom = -0.200005

[node name="MarginContainer" type="MarginContainer" parent="DebugHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VerticalContainer" type="VBoxContainer" parent="DebugHUD/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 483.0
margin_bottom = 119.0

[node name="Position" type="HBoxContainer" parent="DebugHUD/MarginContainer/VerticalContainer"]
margin_right = 478.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Position"]
margin_right = 237.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Position:"
align = 1
valign = 1

[node name="Position" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Position"]
unique_name_in_owner = true
margin_left = 241.0
margin_right = 478.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 5
align = 1
valign = 1

[node name="Health" type="HBoxContainer" parent="DebugHUD/MarginContainer/VerticalContainer"]
margin_top = 29.0
margin_right = 478.0
margin_bottom = 55.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Health"]
margin_left = 95.0
margin_right = 141.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Health:"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="DebugHUD/MarginContainer/VerticalContainer/Health"]
unique_name_in_owner = true
margin_left = 241.0
margin_top = 6.0
margin_right = 478.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
rounded = true

[node name="Ammo" type="HBoxContainer" parent="DebugHUD/MarginContainer/VerticalContainer"]
unique_name_in_owner = true
margin_top = 59.0
margin_right = 478.0
margin_bottom = 84.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Ammo"]
margin_left = 95.0
margin_right = 142.0
margin_bottom = 25.0
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Ammo:"
align = 1
valign = 1

[node name="AmmoCount" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Ammo"]
unique_name_in_owner = true
margin_left = 345.0
margin_right = 374.0
margin_bottom = 25.0
size_flags_horizontal = 6
size_flags_vertical = 5
text = "0 / 0"
align = 1
valign = 1

[node name="Raycast" type="HBoxContainer" parent="DebugHUD/MarginContainer/VerticalContainer"]
margin_top = 88.0
margin_right = 478.0
margin_bottom = 114.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Raycast"]
margin_left = 84.0
margin_right = 153.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 5
text = "Looking at:"
align = 1
valign = 1

[node name="RaycastLabel" type="Label" parent="DebugHUD/MarginContainer/VerticalContainer/Raycast"]
unique_name_in_owner = true
margin_left = 359.0
margin_right = 359.0
margin_bottom = 26.0
size_flags_horizontal = 6
size_flags_vertical = 5
align = 1
valign = 1

[node name="Crosshair" type="Node" parent="DebugHUD"]

[node name="Horizontal" type="Line2D" parent="DebugHUD/Crosshair"]
position = Vector2( 960, 540 )
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="Vertical" type="Line2D" parent="DebugHUD/Crosshair"]
position = Vector2( 965, 537 )
rotation = -1.57079
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="Hitmarker" type="Node2D" parent="DebugHUD/Crosshair"]
modulate = Color( 1, 1, 1, 0 )

[node name="UpperRight" type="Line2D" parent="DebugHUD/Crosshair/Hitmarker"]
position = Vector2( 973, 530 )
rotation = -0.785397
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="LowerLeft" type="Line2D" parent="DebugHUD/Crosshair/Hitmarker"]
position = Vector2( 954, 549 )
rotation = -0.785397
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="UpperLeft" type="Line2D" parent="DebugHUD/Crosshair/Hitmarker"]
position = Vector2( 948, 529 )
rotation = 0.785397
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="LowerRight" type="Line2D" parent="DebugHUD/Crosshair/Hitmarker"]
position = Vector2( 967, 548 )
rotation = 0.785397
points = PoolVector2Array( 1, -3, 1, -5 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../DebugHUD/Crosshair")
anims/RESET = SubResource( 7 )
anims/hitmarker = SubResource( 8 )

[connection signal="ammo_count_changed" from="Camera/Rifle" to="." method="_on_Rifle_ammo_count_changed"]
[connection signal="fired_weapon" from="Camera/Rifle" to="." method="_on_Rifle_fired_weapon"]
